--- a/style.css
+++ b/style.css
@@ -2,9 +2,11 @@
     padding: 0;
     margin: 0;
 }
-
+body{
+    background-color: #fefae0;
+}
 h1 {
-    background-color: rgba(76, 116, 75, 1);
+    background-color: #283618;
     color: white;
     text-align: center;
     height: 5rem;
